--- a/index.html
+++ b/index.html
@@ -76,7 +76,13 @@
 			  <div>Stopwatch icon <img src="img/watch.svg" style="border: 0px solid; height: 1.0rem"> made by <a href="http://www.flaticon.com/authors/dario-ferrando" title="Dario Ferrando">Dario Ferrando</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a><br> license <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC BY 3.0</a></div><br>
 			  <div>Checkered icon <img src="img/checkered.svg" style="border: 0px solid; height: 1.0rem"> and Drag Flick icon <img src="img/drag.svg" style="border: 0px solid; height: 1.0rem"> made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a><br> license <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC BY 3.0</a></div><br/>
            <div>JavaScript 3D library <a href="http://threejs.org" target="_blank">three.js</a> made by three.js authors<br/><a href="https://github.com/mrdoob/three.js/blob/master/LICENSE" target="_blank">MIT license </a></div><br/>
-           <div>JavaScript drag and drop library <a href="http://interactjs.io" target="_blank">interact.js</a> made by Taye Adeyemi &lt;dev@taye.me&gt;<br/><a href="https://github.com/taye/interact.js/blob/master/LICENSE" target="_blank">MIT license</a></div>
+           <div>JavaScript drag and drop library <a href="http://interactjs.io"
+						    target="_blank">interact.js</a>
+	     made by Taye Adeyemi
+	     &lt;dev@taye.me&gt;<br/><a href="https://github.com/taye/interact.js/blob/master/LICENSE"
+					target="_blank">MIT license</a></div></br>
+	   <div><a href="https://github.com/polymake/matchthenet"
+		   title="github"> Download from github</div>
 				<div class='buttonType1 bordered' id='closeMoreButton'></div>
 			</div>
 
