fix a tag in index

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 	     &lt;dev@taye.me&gt;<br/><a href="https://github.com/taye/interact.js/blob/master/LICENSE"
 					target="_blank">MIT license</a></div></br>
 	   <div><a href="https://github.com/polymake/matchthenet"
-		   title="github"> Download from github</div>
-				<div class='buttonType1 bordered' id='closeMoreButton'></div>
+		   title="github">Download from github</div>
+      <div class='buttonType1 bordered' id='closeMoreButton'></div></a>
 			</div>
 
 
