Added the reference to Daniel Eden in About page for animate.css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 <!-- ::::::::::::::::::::::: STARTSCREEN ::::::::::::::::::::::::::::: -->
-		
+
 		<div id=startScreen>
 
 
@@ -75,13 +75,14 @@
            license source: <a href="http://www.gnu.org/licenses/gpl-3.0.txt" title="GPLv3" target="_blank">GPLv3</a>; data and images: <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" title="Creative Commons BY-NC-SA 3.0" target="_blank">CC BY-NC-SA 3.0</a> <br><br>
 			  <div>Stopwatch icon <img src="img/watch.svg" style="border: 0px solid; height: 1.0rem"> made by <a href="http://www.flaticon.com/authors/dario-ferrando" title="Dario Ferrando">Dario Ferrando</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a><br> license <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC BY 3.0</a></div><br>
 			  <div>Checkered icon <img src="img/checkered.svg" style="border: 0px solid; height: 1.0rem"> and Drag Flick icon <img src="img/drag.svg" style="border: 0px solid; height: 1.0rem"> made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a><br> license <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC BY 3.0</a></div><br/>
-           <div>JavaScript 3D library <a href="http://threejs.org" target="_blank">three.js</a> made by three.js authors<br/><a href="https://github.com/mrdoob/three.js/blob/master/LICENSE" target="_blank">MIT license </a></div><br/>
-           <div>JavaScript drag and drop library <a href="http://interactjs.io"
+        <div>JavaScript 3D library <a href="http://threejs.org" target="_blank">three.js</a> made by three.js authors<br/><a href="https://github.com/mrdoob/three.js/blob/master/LICENSE" target="_blank">MIT license </a></div><br/>
+        <div>JavaScript drag and drop library <a href="http://interactjs.io"
 						    target="_blank">interact.js</a>
 	     made by Taye Adeyemi
 	     &lt;dev@taye.me&gt;<br/><a href="https://github.com/taye/interact.js/blob/master/LICENSE"
 					target="_blank">MIT license</a></div></br>
-	   <div><a href="https://github.com/polymake/matchthenet"
+				<div>CSS animation library <a href="https://animate.style/" target="_blank">animate.css</a> made by <a href="https://daneden.me/" title="Daniel Eden">Daniel Eden</a> <br/><a href="https://github.com/animate-css/animate.css/blob/main/LICENSE" target="_blank">Hippocratic License</a></div><br/>
+	   	<div><a href="https://github.com/polymake/matchthenet"
 		   title="github">Download from github</a></div>
       <div class='buttonType1 bordered' id='closeMoreButton'></div>
 			</div>
@@ -100,7 +101,7 @@
 
 				<div id='logo' class='logo notDraggable'><span class=Match>Match</span><span class=The>The</span><span class=Net>Net</span></div>
 
-				
+
 				<div id='points'>
 					<div id='scoreWord'></div>
 					<div class='bordered' id='numPoints'>
@@ -120,7 +121,7 @@
 
 			</header>
 
-			
+
 
 			<!--  ___________________ANIMATIONS________________________  -->
 			<table id=gameTable>
@@ -241,11 +242,11 @@
 
 			<!--  ___________________ END OF ANIMATIONS________________________  -->
 
-			
+
 			<footer id='buttons'>
 
 				<div class='buttonType1 bordered' id='reset'>
-				</div>				
+				</div>
 
 				<div id='restartHint' style='display:none'>Test test test test test</div>
 
@@ -265,7 +266,7 @@
 				</div>
 
 				<div class='buttonType1 bordered' id='solution' style='display:none'>
-				</div>				
+				</div>
 
 				<div class='buttonType1 bordered' id='next' style='display:none'>
 				</div>
@@ -324,7 +325,7 @@
 				</tr>
 			</table>
 
-				<div class='buttonType1 bordered' id='newGame'></div>				
+				<div class='buttonType1 bordered' id='newGame'></div>
 		</div>
 
 
@@ -342,6 +343,6 @@
 		<script src="js/dragndrop2.js"></script>
 		<script src="js/folding.js"></script>
 		<script src="js/startGame.js"></script>
-		
+
 	</body>
 </html>
