--- a/index.html
+++ b/index.html
@@ -268,6 +268,9 @@
 				<div class='buttonType1 bordered' id='solution' style='display:none'>
 				</div>
 
+				<div class='buttonType1 bordered' id='info' style='display:none'>
+				</div>
+
 				<div class='buttonType1 bordered' id='next' style='display:none'>
 				</div>
 
@@ -328,7 +331,14 @@
 				<div class='buttonType1 bordered' id='newGame'></div>
 		</div>
 
+      <div id='infoScreen' style='display: none;'>
+         <h2>Information on the current polytopes:</h2>
+         <div id='infoContainer'>
+         </div>
+      </div>
 
+
+		<div id='infoScripts'></div>
 		<div id='polyScripts'></div>
 		<div id='foldingScripts'></div>
 
