Add christmassy background

--- a/index.html
+++ b/index.html
@@ -24,16 +24,18 @@
 		<div id=startScreen>
 
 
-			<img id=startImgFolded1 class='startScreenImg notDraggable' src='img/truncoct_fold3.svg'>
+			<!--<img id=startImgFolded1 class='startScreenImg notDraggable' src='img/truncoct_fold3.svg'>
 			<img id=startImgFolded2 class='startScreenImg notDraggable' src='img/truncoct_fold3.svg'>
 			<img id=startImgNearlyFolded1 class='startScreenImg notDraggable' src='img/truncoct_fold2.svg'>
 			<img id=startImgNearlyFolded2 class='startScreenImg notDraggable' src='img/truncoct_fold2.svg'>
 			<img id=startImgHalfFolded1 class='startScreenImg notDraggable' src='img/truncoct_fold1.svg'>
 			<img id=startImgHalfFolded2 class='startScreenImg notDraggable' src='img/truncoct_fold1.svg'>
 			<img id=startImgNet1 class='startScreenImg notDraggable' src='img/truncoct_net.svg'>
-			<img id=startImgNet2 class='startScreenImg notDraggable' src='img/truncoct_net.svg'>
+			<img id=startImgNet2 class='startScreenImg notDraggable' src='img/truncoct_net.svg'>-->
 
-			<div id='startLogo' class='logo notDraggable'><span class=Match>Match</span><span class=The>The</span><span class=Net>Net</span></div>
+			<img class='background notDraggable' src='img/background0.svg'>
+			
+         <div id='startLogo' class='logo notDraggable'><span class=Match>Match</span><span class=The>The</span><span class=Net>Net</span></div>
 
 			<p id=intro>
 			</p>
