--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@
 			<footer id=copyright>&copy; 2016 Joswig, Loho, Lorenz, Raber &amp; the polymake team; license GPLv3 / CC BY-NC-SA 3.0</footer>
 
 
-			<div id=moreScreen style='display: none;' class='animated bounceIn'>
+			<div id=moreScreen style='display: none;' class='animated '>
 			  &copy; 2016 <a href="http://www.math.tu-berlin.de/~joswig/" target="_blank">Michael Joswig</a>, Georg Loho, Benjamin Lorenz, Rico Raber &amp; the <a href="http://www.polymake.org/doku.php/team" target="_blank">polymake team</a><br>
            license source: <a href="http://www.gnu.org/licenses/gpl-3.0.txt" title="GPLv3" target="_blank">GPLv3</a>; data and images: <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" title="Creative Commons BY-NC-SA 3.0" target="_blank">CC BY-NC-SA 3.0</a> <br><br>
 			  <div>Stopwatch icon <img src="img/watch.svg" style="border: 0px solid; height: 1.0rem"> made by <a href="http://www.flaticon.com/authors/dario-ferrando" title="Dario Ferrando">Dario Ferrando</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a><br> license <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC BY 3.0</a></div><br>
 			  <div>Checkered icon <img src="img/checkered.svg" style="border: 0px solid; height: 1.0rem"> and Drag Flick icon <img src="img/drag.svg" style="border: 0px solid; height: 1.0rem"> made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a><br> license <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC BY 3.0</a></div><br/>
+			  <div>Iconoir info icon <img src="img/info.svg" style="border: 0px solid; height: 1.0rem"> made by <a href="https://github.com/lucaburgio" title="Luca Burgio">Luca Burgio</a><br> license <a href="https://github.com/lucaburgio/iconoir/blob/master/LICENSE" title="MIT" target="_blank">MIT</a></div><br/>
         <div>JavaScript 3D library <a href="http://threejs.org" target="_blank">three.js</a> made by three.js authors<br/><a href="https://github.com/mrdoob/three.js/blob/master/LICENSE" target="_blank">MIT license </a></div><br/>
         <div>JavaScript drag and drop library <a href="http://interactjs.io"
 						    target="_blank">interact.js</a>
