hovering info per polytope

--- a/index.html
+++ b/index.html
@@ -128,27 +128,52 @@
 			<table id=gameTable>
 
 				<tr id=polytopesRow class='gameTableRow'>
-					<td class='polytope animation' id='poly0'></td>
+					<td class='polytope animation' id='poly0'>
+					<div class='infoHint' id='infoHint0' style='display:none'>
+						<img id='infoIcon' src='img/info.svg' class='notDraggable'>
+					</div>
+					<div class='infoBox' id='infoBox0' style='display:none'></div>
+               </td>
 
 					<td>
 					</td>
 
-					<td class='polytope animation' id='poly1'></td>
+					<td class='polytope animation' id='poly1'>
+					<div class='infoHint' id='infoHint1' style='display:none'>
+						<img id='infoIcon' src='img/info.svg' class='notDraggable'>
+					</div>
+					<div class='infoBox' id='infoBox1' style='display:none'></div>
+               </td>
 
 					<td>
 					</td>
 
-					<td class='polytope animation' id='poly2'></td>
+					<td class='polytope animation' id='poly2'>
+					<div class='infoHint' id='infoHint2' style='display:none'>
+						<img id='infoIcon' src='img/info.svg' class='notDraggable'>
+					</div>
+					<div class='infoBox' id='infoBox2' style='display:none'></div>
+               </td>
 
 					<td>
 					</td>
 
-					<td class='polytope animation' id='poly3' style='display:none'></td>
+					<td class='polytope animation' id='poly3' style='display:none'>
+					<div class='infoHint' id='infoHint3' style='display:none'>
+						<img id='infoIcon' src='img/info.svg' class='notDraggable'>
+					</div>
+					<div class='infoBox' id='infoBox3' style='display:none'></div>
+					</td>
 
 					<td>
 					</td>
 
-					<td class='polytope animation' id='poly4' style='display:none'></td>
+					<td class='polytope animation' id='poly4' style='display:none'>
+               <div class='infoHint' id='infoHint4' style='display:none'>
+                  <img id='infoIcon' src='img/info.svg' class='notDraggable'>
+               </div>
+					<div class='infoBox' id='infoBox4' style='display:none'></div>
+					</td>
 
 				</tr>
 
