try more touch-friendly info

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 			<!--  ___________________ANIMATIONS________________________  -->
 			<table id=gameTable>
 
-				<tr id=polytopesRow class='gameTableRow'>
+				<tr id=polytopesRow ontouchstart class='gameTableRow'>
 					<td class='polytope animation' id='poly0'>
 					<div class='infoHint' id='infoHint0' style='display:none'>
 						<img id='infoIcon' src='img/info.svg' class='notDraggable'>
