Background on play screen

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<img id=startImgNet2 class='startScreenImg notDraggable' src='img/truncoct_net.svg'>-->
 
 			<img class='background notDraggable' src='img/background1.svg'>
-			
+
          <div id='startLogo' class='logo notDraggable'><span class=Match>Match</span><span class=The>The</span><span class=Net>Net</span></div>
 
 			<p id=intro>
@@ -99,6 +99,7 @@
 
 
 		<div id='game' style='display:none'>
+				<img class='background notDraggable' src='img/background1.svg'>
 
 			<header>
 
