make button positions slightly more flexible

--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
 					<span id='difficultyTextDifficult'></span>
 				</div>
 
+            <div id='nextblock'>
 				<div class='buttonType1 bordered' id='ok'>
 				</div>
 
@@ -308,6 +309,7 @@
 
 				<div class='buttonType1 bordered' id='next' style='display:none'>
 				</div>
+            </div>
 
 			</footer>
 
